--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,8 @@
   },
   "plugins": [],
   "rules": {
+    "semi": ["error", "never"],
+    "comma-dangle": ["error", "always-multiline"],
   },
   "globals": {
     "TrelloPowerUp": true,
