--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Trello power-up to visualise and manage dependencies between cards",
   "main": "js/index.js",
   "scripts": {
+    "start": "http-server ./ --cors --ssl",
     "test": "eslint js/*.js"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/piemonkey/trello-dependency#readme",
   "devDependencies": {
-    "eslint": "^3.12.2"
+    "eslint": "^3.12.2",
+    "http-server": "^0.9.0"
   }
 }
