--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "author": "piemonkey",
   "capabilities": [
     "callback",
-    "card-badges"
+    "card-badges",
+    "card-detail-badges"
   ],
   "connectors": {
     "iframe": {
